--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file ./.env --no-check ./src/server.ts"
+    "dev": "tsx watch --env-file ./.env.dev --no-check ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "mqtt": "^5.13.1",
+    "zod": "^3.25.67"
   }
 }
