--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.35.0",
     "dotenv": "^16.5.0",
     "mqtt": "^5.13.1",
     "zod": "^3.25.67"
