--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@biomejs/biome": "2.0.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
@@ -18,6 +19,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.35.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "mqtt": "^5.13.1",
     "zod": "^3.25.67"
   }
