--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ NODE_ENV=development
 
 # InfluxDB
 INFLUX_URL=http://localhost:8086
-INFLUX_TOKEN=EMkFtQNx2H_D89yUhpCcShfbHbbhbpnDLCnBUw2gfEgJKIQRkuxibP7BiDKke4-PpQu4g_wDGY-UBGk4O1tmew==
+INFLUX_TOKEN=
 INFLUX_ORG=teste
 INFLUX_BUCKET=teste
 
